--- a/packages/pyxis-scss/src/scss/components/forms/controls/radio.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/radio.scss
@@ -15,7 +15,7 @@
   border-radius: 50%;
 
   &:checked,
-  &:active:not(:disabled, [disabled]) {
+  &:active {
     @include _boxShadow(neutralLight);
   }
 
